<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_menu"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_menu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_gravity="center"
            android:src="@drawable/ic_maintanance" />

        <TextView
            android:id="@+id/text_delete_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space"
            android:gravity="center"
            android:text="@string/cancel_this_phone_number"
            android:textColor="@color/colorNormal"
            android:textSize="@dimen/text_normal_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_delete"
        android:layout_width="@dimen/menu_size_big"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:padding="@dimen/half_space"
            android:text="@string/are_you_sure_to_cancel_this_number"
            android:textColor="@color/colorNormal"
            android:textSize="@dimen/text_normal_big_size" />

        <TextView
            android:id="@+id/text_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSelection"
            android:gravity="center"
            android:padding="@dimen/half_space"
            android:text="@string/yes"
            android:textColor="@color/colorNormal"
            android:textSize="@dimen/text_normal_big_size" />

        <TextView
            android:id="@+id/text_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:padding="@dimen/half_space"
            android:text="@string/no"
            android:textColor="@color/colorNormal"
            android:textSize="@dimen/text_normal_big_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorSelection" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorSelection" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_ok"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/colorGreen"
            android:drawableLeft="@drawable/ic_check_white"
            android:focusable="false"
            android:gravity="left|center_vertical"
            android:text="@string/ok"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/colorNormal"
            android:drawableLeft="@drawable/ic_cancel_white"
            android:focusable="false"
            android:gravity="left|center_vertical"
            android:text="@string/cancel"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</RelativeLayout>