<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_no_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="@dimen/half_space"
        android:text="@string/no_history_avaiable"
        android:textColor="@color/colorNormal"
        android:textSize="@dimen/text_normal_big_size" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_contact"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linear_bottom"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/linear_menu"
        android:layout_width="@dimen/menu_size"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/text_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSelection"
            android:gravity="center"
            android:padding="@dimen/half_space"
            android:text="@string/delete"
            android:textColor="@color/colorNormal"
            android:textSize="@dimen/text_normal_big_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_delete"
        android:layout_width="@dimen/menu_size_big"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/colorWhite"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:padding="@dimen/half_space"
            android:text="@string/are_you_sure_to_delete"
            android:textColor="@color/colorNormal"
            android:textSize="@dimen/text_normal_big_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorSelection" />

        <TextView
            android:id="@+id/text_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSelection"
            android:gravity="center"
            android:padding="@dimen/half_space"
            android:text="@string/yes"
            android:textColor="@color/colorNormal"
            android:textSize="@dimen/text_normal_big_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorSelection" />

        <TextView
            android:id="@+id/text_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:padding="@dimen/half_space"
            android:text="@string/no"
            android:textColor="@color/colorNormal"
            android:textSize="@dimen/text_normal_big_size" />

    </LinearLayout>

</RelativeLayout>