<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDarkGreen"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/half_space"
            android:text="@string/select_phone_number_for_purchase"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_normal_size"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_no_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="@dimen/half_space"
        android:text="@string/no_number_available"
        android:textColor="@color/colorNormal"
        android:textSize="@dimen/text_normal_big_size" />

    <LinearLayout
        android:id="@+id/linear_delete"
        android:layout_width="@dimen/menu_size_big"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/colorWhite"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_popup_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:padding="@dimen/half_space"
            android:text="@string/do_you_want_to_puchase_this_number"
            android:textColor="@color/colorNormal"
            android:textSize="@dimen/text_normal_big_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorSelection" />

        <TextView
            android:id="@+id/text_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSelection"
            android:gravity="center"
            android:padding="@dimen/half_space"
            android:text="@string/yes"
            android:textColor="@color/colorNormal"
            android:textSize="@dimen/text_normal_big_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorSelection" />

        <TextView
            android:id="@+id/text_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:padding="@dimen/half_space"
            android:text="@string/no"
            android:textColor="@color/colorNormal"
            android:textSize="@dimen/text_normal_big_size" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_number"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linear_bottom"
        android:layout_below="@+id/linear_title"
        android:visibility="gone" />
</RelativeLayout>