<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_menu"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:visibility="gone"
        android:src="@drawable/ic_menu"
        android:layout_alignParentRight="true"/>

    <TextView
        android:id="@+id/text_no_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_below="@+id/image_menu"
        android:padding="@dimen/half_space"
        android:text="@string/no_contacts"
        android:textAllCaps="true"
        android:textColor="@color/colorNormal"
        android:textSize="@dimen/text_normal_big_size" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_contact"
        android:layout_below="@+id/image_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linear_bottom"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/linear_menu"
        android:layout_width="@dimen/menu_size"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/text_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSelection"
            android:gravity="center"
            android:padding="@dimen/half_space"
            android:text="@string/add"
            android:textColor="@color/colorNormal"
            android:textSize="@dimen/text_normal_big_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorSelection" />

        <TextView
            android:id="@+id/text_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:padding="@dimen/half_space"
            android:text="@string/edit"
            android:textColor="@color/colorNormal"
            android:textSize="@dimen/text_normal_big_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorSelection" />

        <TextView
            android:id="@+id/text_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:padding="@dimen/half_space"
            android:text="@string/delete"
            android:textColor="@color/colorNormal"
            android:textSize="@dimen/text_normal_big_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorSelection" />

        <TextView
            android:id="@+id/text_maintanance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:padding="@dimen/half_space"
            android:text="@string/maintanance"
            android:textColor="@color/colorNormal"
            android:textSize="@dimen/text_normal_big_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_delete"
        android:layout_width="@dimen/menu_size_big"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/colorWhite"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:padding="@dimen/half_space"
            android:text="@string/are_you_sure_to_delete"
            android:textColor="@color/colorNormal"
            android:textSize="@dimen/text_normal_big_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorSelection" />

        <TextView
            android:id="@+id/text_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSelection"
            android:gravity="center"
            android:padding="@dimen/half_space"
            android:text="@string/yes"
            android:textColor="@color/colorNormal"
            android:textSize="@dimen/text_normal_big_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorSelection" />

        <TextView
            android:id="@+id/text_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:padding="@dimen/half_space"
            android:text="@string/no"
            android:textColor="@color/colorNormal"
            android:textSize="@dimen/text_normal_big_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_call"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:focusable="false"
            android:background="@color/colorGreen"
            android:drawableLeft="@drawable/ic_call_white_24dp"/>

        <Button
            android:id="@+id/button_back"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_margin="2dp"
            android:focusable="false"
            android:layout_weight="1"
            android:background="@color/colorGreen"
            android:drawableLeft="@drawable/ic_backspace"/>

        <Button
            android:id="@+id/button_history"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/colorGreen"
            android:drawableLeft="@drawable/ic_history"
            android:focusable="false"
            android:visibility="gone" />
    </LinearLayout>

    <ImageView
        android:visibility="gone"
        android:id="@+id/image_dail"
        android:layout_width="@dimen/icon_size_big"
        android:layout_height="@dimen/icon_size_big"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/space"
        android:layout_marginBottom="@dimen/icon_size"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_launcher_contact"/>

</RelativeLayout>